[package]
name = "warpgrapher-lambda"
version = "0.1.0"
authors = ["dev"]
edition = "2018"
autobins = false

[dependencies]
lambda = { git="https://github.com/awslabs/aws-lambda-rust-runtime", branch="master" }
log = "^0.4"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
simple_logger = "^1"
tokio = "0.2.22"
warpgrapher = { git="https://github.com/warpforge/warpgrapher", branch="53-release-0.3.0", features=["cosmos"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"