[package]
name = "warpgrapher-lambda"
version = "0.11.2"
authors = ["dev"]
edition = "2021"
autobins = false

[dependencies]
lambda_runtime = "0.3.0"
log = "0.4.17"
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
simple_logger = "2.1.0"
tokio = "1.19.2"
warpgrapher = { version="0.11.2", features=["cypher"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
